--- a/frontend/src/pages/Signup.css
+++ b/frontend/src/pages/Signup.css
@@ -105,10 +105,9 @@
 .rightSection {
   padding: 58px 64px;
   display: flex;
+   align-items: center;
   flex-direction: column;
   justify-content: center;
-
-
   background-color: #eef4ff;
 }
 
